<resources>
    <string name="app_name">Faihaa Schools</string>
    <string name="absent"> absent</string>
    <string name="homework">home work</string>
    <string name="honorboard">honor board</string>
    <string name="table">table</string>
    <string name="activities">activities</string>
    <string name="rate">student rate</string>
    <string name="row_name">row name</string>
    <string name="tuition_fees">tuition fees</string>
    <string name="transfer_fees_1">pay</string>
    <string name="student_fees">Student Fees</string>
    <string name="name">Name</string>
    <string name="classrooms_name">Class</string>
    <string name="sub_stages_name">SubStage</string>
    <string name="school_name">School</string>
    <string name="transport_type">Transport type</string>
    <string name="payment_type">Payment type</string>
    <string name="current_all_fees">All Fees</string>
    <string name="current_remain">Remain Fees</string>
    <string name="current_paid">Current Paid</string>
    <string name="news">News</string>
    <string name="arrive">About Us</string>
    <string name="classes">Classes</string>
    <string name="contact">Contact Us</string>
    <string name="logout">logout</string>
    <string name="log_in">Login.....</string>
    <string name="child_fees">children fees</string>
    <string name="show_student_details">Details</string>
    <string name="something_error">error something haywire</string>
    <string name="details">Details</string>
    <string name="exam_name">Exam name</string>
    <string name="std_name">Student name</string>
    <string name="sub_name">subject name</string>
    <string name="eval_degree">Degree</string>
    <string name="address">Location</string>
    <string name="title_activity_location">Map</string>
    <string name="school_fees">school fees</string>
    <string name="name_school">school name</string>
    <string name="school_trans">transport fees</string>
    <string name="copyright">CopyRight</string>

</resources>
