<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context="com.Alatheer.m.schooles.Activities.Student_Fees">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:padding="5dp"
        android:background="@drawable/back"
        android:text="@string/student_fees"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_classrooms_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/classrooms_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_sub_stages_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/sub_stages_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_school_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/school_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_transport_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/transport_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_payment_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/payment_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_current_all_fees"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/current_all_fees"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_current_paid"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/current_paid"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_current_remain"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/current_remain"/>
    </LinearLayout>




</LinearLayout>
