<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:background="@drawable/back1"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/app_name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/copyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/white"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:src="@drawable/co"
                   />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
        <Button
            android:id="@+id/btn_news"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:drawableLeft="@drawable/news"
            android:background="@drawable/btn1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:clickable="true"
            android:drawablePadding="30dp"
            android:paddingLeft="10dp"
            android:text="@string/news"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_school_fees"

                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/fees"
                android:background="@drawable/btn1"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:clickable="true"
                android:text="@string/school_fees"/>
            <Button
                android:id="@+id/btn_school_about"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/map"
                android:background="@drawable/btn1"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingBottom="10dp"

                android:text="@string/arrive"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_activities"

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:clickable="true"
            android:drawableLeft="@drawable/activities"
            android:background="@drawable/btn1"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:drawablePadding="30dp"
            android:paddingLeft="10dp"
            android:text="@string/activities"/>



    </LinearLayout>
</ScrollView>