<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Alatheer.Riad.Alqassim.Activities.ChildrenFeesDetails"
    android:orientation="vertical"
    android:background="@drawable/back1"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            android:background="@color/colorPrimary"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_white_arrow"
                android:padding="10dp"
                android:id="@+id/back"
                android:clickable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/details"


                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14dp"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"


        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:scrollbars="none"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_stages_name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"


                />
            <TextView
                android:id="@+id/sub_stages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classrooms_name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/classrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport_type"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/transport_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_type"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_all_fees"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/current_fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_remain"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/current_remain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_paid"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                />
            <TextView
                android:id="@+id/current_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/child_detail_bg"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"

                />
        </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
   </LinearLayout>
</LinearLayout>
